--- a/cloudFrontEnd/src/app/nav/nav.component.html
+++ b/cloudFrontEnd/src/app/nav/nav.component.html
@@ -52,6 +52,57 @@
 
   <!--    <div *ngIf="!noTemperature" [ngClass]="tempAlertClass" class="mx-auto temp">Core Temp: {{temperature}} °C</div>-->
     <div>
+      <button mat-button #loginButton [matMenuTriggerFor]="menuLogin">Log in</button>
+      <mat-menu #menuLogin="matMenu">
+        <mat-card>
+          <mat-card-subtitle>Log in to Cloud Service</mat-card-subtitle>
+          <mat-card-content (click)="$event.stopPropagation()" (keydown)="keyDownHandler($event)">
+            <div>
+              <mat-form-field appearance="legacy" [style.width.px]="225">
+                <input matInput type="text" autocomplete="off" maxlength="20"
+                       [formControl]="getFormControl('username')"
+                       matTooltip="Enter your Cloud Service user name."
+                       matTooltipClass="tooltip"
+                       placeholder="User name">
+                <mat-hint>Admin user name for the cameras</mat-hint>
+                <mat-error *ngIf="loginForm.controls['username'].hasError('pattern')">5 or more characters and numbers</mat-error>
+                <mat-error *ngIf="loginForm.controls['username'].hasError('required')">User name is required</mat-error>
+              </mat-form-field>
+            </div>
+            <div>
+              <mat-form-field appearance="legacy" [style.width.px]="225">
+                <input matInput type="password" autocomplete="off" maxlength="25"
+                       [formControl]="getFormControl('password')"
+                       matTooltip="Enter your Cloud Service password"
+                       matTooltipClass="tooltip"
+                       placeholder="Password">
+                <mat-hint>Admin password for the cameras</mat-hint>
+                <mat-error *ngIf="loginForm.controls['password'].hasError('pattern')">Upper, lower case, numbers and special chars</mat-error>
+                <mat-error *ngIf="loginForm.controls['password'].hasError('required')">Password is required</mat-error>
+              </mat-form-field>
+            </div>
+            <br>
+            <span class="cam-creds-confirm-group">
+      <button color="default" mat-flat-button (click)="hidePasswordDialogue()"
+              matTooltip="Close this dialogue and leave the existing user name and password in place"
+              matTooltipClass="tooltip">
+        Cancel
+      </button>
+              <span>&nbsp;&nbsp;</span>
+      <button color="warning" mat-flat-button
+              [disabled]="anyInvalid()"
+              (click)="updateCredentials()"
+              matTooltip="Save the new user name and password"
+              matTooltipClass="tooltip">
+        Confirm
+      </button>
+    </span>
+          </mat-card-content>
+        </mat-card>
+
+      </mat-menu>
+    </div>
+    <div>
       <button mat-button [matMenuTriggerFor]="menuGeneral">General</button>
       <mat-menu #menuGeneral="matMenu">
         <button mat-menu-item (click)="configSetup();menuClosed()">Configure Camera Setup</button>
