--- a/cloudFrontEnd/src/app/login/login.component.html
+++ b/cloudFrontEnd/src/app/login/login.component.html
@@ -1,16 +1,17 @@
 <div class="login-container">
   <mat-card class="mat-elevation-z8" xmlns="http://www.w3.org/1999/html">
     <mat-card-title>Log in to Cloud Service</mat-card-title>
-    <mat-card-content (click)="$event.stopPropagation()" (keydown)="keyDownHandler($event)">
+    <mat-card-content>
       <div class="alert-danger mat-elevation-z4" [style]="'display: '+(errorMessage != '' ? 'inline-block' : 'none')">{{errorMessage}}</div>
       <div>
         <mat-form-field appearance="legacy" [style.width.px]="225">
-          <input matInput type="text" autocomplete="off" maxlength="20"
+          <input #username matInput type="text" autocomplete="off" maxlength="20"
                  [formControl]="getFormControl('username')"
+                 (keypress)="confirmOnReturn($event)"
                  matTooltip="Enter your Cloud Service user name."
                  matTooltipClass="tooltip"
                  placeholder="User name">
-          <mat-hint>Admin user name for the cameras</mat-hint>
+          <mat-hint>User name for your Cloud account</mat-hint>
           <mat-error *ngIf="loginForm.controls['username'].hasError('pattern')">5 or more characters and numbers
           </mat-error>
           <mat-error *ngIf="loginForm.controls['username'].hasError('required')">User name is required</mat-error>
@@ -20,10 +21,11 @@
         <mat-form-field appearance="legacy" [style.width.px]="225">
           <input matInput type="password" autocomplete="off" maxlength="25"
                  [formControl]="getFormControl('password')"
+                 (keypress)="confirmOnReturn($event)"
                  matTooltip="Enter your Cloud Service password"
                  matTooltipClass="tooltip"
                  placeholder="Password">
-          <mat-hint>Admin password for the cameras</mat-hint>
+          <mat-hint>Password for the Cloud account</mat-hint>
           <mat-error *ngIf="loginForm.controls['password'].hasError('pattern')">Upper, lower case, numbers and special
             chars
           </mat-error>
