Validation working on product ID input. Limit cursor to sensible positions on focus

--- a/cloudFrontEnd/src/app/register-account/product-id-input/product-id-input.component.html
+++ b/cloudFrontEnd/src/app/register-account/product-id-input/product-id-input.component.html
@@ -1,7 +1,7 @@
 <mat-form-field class="prod_id_input-container" appearance="legacy" [style.width.px]="225">
-  <input #productIdCtl matInput type="tel" autocomplete="off" maxlength="16"
+  <input #productIdCtl matInput type="text" autocomplete="off" maxlength="19"
          [formControl]="getFormControl()"
-         (keypress)="handleKeyPress($event, this.productIdCtl)"
+         (focus)="setFocus()"
          (keydown)="handleKeyDown($event, this.productIdCtl)"
          class="mono"
          matTooltip="Enter your NVRs Product ID"
