Start setting up ajax call for registration.

--- a/cloudFrontEnd/src/app/register-account/product-id-input/product-id-input.component.html
+++ b/cloudFrontEnd/src/app/register-account/product-id-input/product-id-input.component.html
@@ -4,9 +4,11 @@
          (focus)="setFocus()"
          (keydown)="handleKeyDown($event, this.productIdCtl)"
          class="mono"
-         matTooltip="Enter your NVRs Product ID"
+         matTooltip="Enter your NVR Product ID. This will have been provided on a note with your NVR"
          matTooltipClass="tooltip"
          placeholder="NVR Product ID">
   <mat-hint>The 16 character product ID of your NVR</mat-hint>
+  <mat-error *ngIf="formControl.hasError('pattern')">All 16 characters of the product ID are required
+  </mat-error>
 </mat-form-field>
 
