Started user registration.

--- a/cloudFrontEnd/src/app/register-account/register-account.component.html
+++ b/cloudFrontEnd/src/app/register-account/register-account.component.html
@@ -55,7 +55,7 @@
           <input matInput type="email" autocomplete="off" maxlength="40"
                  [formControl]="getFormControl('email')"
                  (keypress)="confirmOnReturn($event)"
-                 matTooltip="Enter your email address"
+                 matTooltip="Enter your email address. This is required to provide a means of resetting forgotten passwords"
                  matTooltipClass="tooltip"
                  placeholder="email address">
           <mat-hint>Your email address</mat-hint>
