--- a/cloudFrontEnd/src/app/login/login.component.html
+++ b/cloudFrontEnd/src/app/login/login.component.html
@@ -2,7 +2,9 @@
   <mat-card class="mat-elevation-z8" xmlns="http://www.w3.org/1999/html">
     <mat-card-title>Log in to Cloud Service</mat-card-title>
     <mat-card-content>
-      <div class="alert-danger mat-elevation-z4" [style]="'display: '+(errorMessage != '' ? 'inline-block' : 'none')">{{errorMessage}}</div>
+      <div class="message-display">
+        <div class="alert-danger mat-elevation-z4" [style]="'display: '+(errorMessage != '' ? 'inline-block' : 'none')">{{errorMessage}}</div>
+      </div>
       <div>
         <mat-form-field appearance="legacy" [style.width.px]="225">
           <input #username matInput type="text" autocomplete="off" maxlength="20"
