About box for Cloud app (when logged in as admin) as well as for NVR.

--- a/cloudFrontEnd/src/app/nav/nav.component.html
+++ b/cloudFrontEnd/src/app/nav/nav.component.html
@@ -53,8 +53,8 @@
     <div *ngIf="utilsService.isAdmin">
       <button mat-button [matMenuTriggerFor]="admin">Admin</button>
       <mat-menu #admin=matMenu>
-        <button mat-menu-item (click)="menuClosed()">
-          Users admin
+        <button mat-menu-item (click)="nvrAdmin(); menuClosed()">
+          NVRs admin
         </button>
       </mat-menu>
     </div>
