--- a/cloudFrontEnd/src/app/about/about.component.html
+++ b/cloudFrontEnd/src/app/about/about.component.html
@@ -2,7 +2,7 @@
 
 <div class="about-box-container">
   <mat-card class="mat-elevation-z8" xmlns="http://www.w3.org/1999/html">
-    <mat-card-title>About Security Cam</mat-card-title>
+    <mat-card-title>About {{isLocal?"CCTV Cloud":"NVR"}}</mat-card-title>
     <mat-card-content>
        <div>Version: {{version}}</div>
       <hr>
