--- a/cloudFrontEnd/src/app/accountAdmin/account-admin.component.html
+++ b/cloudFrontEnd/src/app/accountAdmin/account-admin.component.html
@@ -28,10 +28,10 @@
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="userConnected">
-        <th mat-header-cell *matHeaderCellDef>User Connected</th>
+      <ng-container matColumnDef="usersConnected">
+        <th mat-header-cell *matHeaderCellDef>Users Connected</th>
         <td mat-cell *matCellDef="let account; let i = dataIndex">
-          {{account.userConnected}}
+          {{account.usersConnected}}
         </td>
       </ng-container>
 
