--- a/cloudFrontEnd/src/app/accountAdmin/account-admin.component.html
+++ b/cloudFrontEnd/src/app/accountAdmin/account-admin.component.html
@@ -14,6 +14,14 @@
         </td>
       </ng-container>
 
+      <ng-container matColumnDef="accountCreated">
+        <th mat-header-cell *matHeaderCellDef>Account Created</th>
+        <td mat-cell *matCellDef="let account; let i = dataIndex">
+          {{account.accountCreated}}
+        </td>
+      </ng-container>
+
+
       <ng-container matColumnDef="userName">
         <th mat-header-cell *matHeaderCellDef>Username</th>
         <td mat-cell *matCellDef="let account; let i = dataIndex">
