--- a/cloudFrontEnd/src/app/accountAdmin/account-admin.component.html
+++ b/cloudFrontEnd/src/app/accountAdmin/account-admin.component.html
@@ -4,9 +4,19 @@
     <mat-spinner [diameter]="25"></mat-spinner>
     <span>Loading, Please wait..</span>
   </mat-card-content>
-  <mat-card-content>
+  <mat-card-content *ngIf="!downloading">
+    <mat-form-field appearance="standard">
+      <mat-label>Filter Text</mat-label>
+      <input matInput type="text"
+             #filter
+             (keyup)="updateFilter()"
+             matTooltip="Enter a search term to filter the list"
+             matTooltipClass="tooltip"
+             placeholder="Filter">
+    </mat-form-field>
+
     <table mat-table class="mat-elevation-z8"
-    [dataSource]="accounts">
+           [dataSource]="accounts | filter:filterText">
       <ng-container matColumnDef="productId">
         <th mat-header-cell *matHeaderCellDef>ProductId</th>
         <td mat-cell class="product-id" *matCellDef="let account; let i = dataIndex">
@@ -17,10 +27,11 @@
       <ng-container matColumnDef="accountCreated">
         <th mat-header-cell *matHeaderCellDef>Account Created</th>
         <td mat-cell *matCellDef="let account; let i = dataIndex">
-          <mat-icon matTooltip="{{account.accountCreated?'An account has been created':'No account has yet been created'}}"
-                    matTooltipClass="tooltip"
-                    [ngClass]="account.accountCreated?'status-ok':'status-warn'">
-            {{account.accountCreated?'account_circle':'notification_important'}}
+          <mat-icon
+            matTooltip="{{account.accountCreated?'An account has been created':'No account has yet been created'}}"
+            matTooltipClass="tooltip"
+            [ngClass]="account.accountCreated?'status-ok':'status-warn'">
+            {{account.accountCreated ? 'account_circle' : 'notification_important'}}
           </mat-icon>
         </td>
       </ng-container>
@@ -39,7 +50,7 @@
           <mat-icon matTooltip="{{account.nvrConnected?'NVR is connected':'NVR is not connected'}}"
                     matTooltipClass="tooltip"
                     [ngClass]="account.nvrConnected?'status-ok':'status-warn'">
-            {{account.nvrConnected?'sync':'sync_problem'}}
+            {{account.nvrConnected ? 'sync' : 'sync_problem'}}
           </mat-icon>
         </td>
       </ng-container>
