--- a/cloudFrontEnd/src/app/accountAdmin/account-admin.component.scss
+++ b/cloudFrontEnd/src/app/accountAdmin/account-admin.component.scss
@@ -21,3 +21,9 @@ table {
   @extend .status;
   color: red;
 }
+
+.filter-checkbox {
+  margin-left: 1rem;
+  position: relative;
+  top: 0.25rem;
+}
