--- a/cloudFrontEnd/src/app/accountAdmin/account-admin.component.scss
+++ b/cloudFrontEnd/src/app/accountAdmin/account-admin.component.scss
@@ -27,3 +27,12 @@ table {
   position: relative;
   top: 0.25rem;
 }
+
+
+.buttons {
+  background-color: #323232;
+}
+
+.check-box {
+  background: linear-gradient(90deg, #323232 95%, #424242 95%);
+}
