--- a/cloudFrontEnd/src/app/accountAdmin/account-admin.component.html
+++ b/cloudFrontEnd/src/app/accountAdmin/account-admin.component.html
@@ -5,6 +5,12 @@
     <span>Loading, Please wait..</span>
   </mat-card-content>
   <mat-card-content *ngIf="!downloading">
+    <div class="message-display" (click)="errorMessage=''; successMessage=''">
+      <div class="alert-danger mat-elevation-z4"
+           [style]="'display: '+(errorMessage != '' ? 'inline-block' : 'none')">{{errorMessage}}</div>
+      <div class="alert-success mat-elevation-z4"
+           [style]="'display: '+(successMessage != '' ? 'inline-block' : 'none')">{{successMessage}}</div>
+    </div>
     <mat-form-field appearance="standard">
       <mat-label>Filter Text</mat-label>
       <input matInput type="text"
