--- a/cloudFrontEnd/src/app/accountAdmin/account-admin.component.html
+++ b/cloudFrontEnd/src/app/accountAdmin/account-admin.component.html
@@ -57,9 +57,9 @@
                         [checked]="account.accountEnabled"
                         [disabled]="!account.accountCreated"
                         (change)="setAccountEnabledStatus(account, $event)">
-            {{account.accountEnabled?"Enabled":"Disabled"}}
+            {{account.accountEnabled ? "Enabled" : "Disabled"}}
           </mat-checkbox>
-         </td>
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="productId">
@@ -108,25 +108,44 @@
               <ng-container matColumnDef="password">
                 <th mat-header-cell *matHeaderCellDef>password</th>
                 <td mat-cell *matCellDef="let acc">
-                 {{acc.productId}}
-                </td>
-              </ng-container>
-              <ng-container matColumnDef="confirmPassword">
-                <th mat-header-cell *matHeaderCellDef>confirm password</th>
-                <td mat-cell *matCellDef="let acc">
-                  Text
-                </td>
-              </ng-container>
-              <ng-container matColumnDef="cancel">
-                <th mat-header-cell *matHeaderCellDef>cancel</th>
-                <td mat-cell *matCellDef="let acc">
-                  Text
-                </td>
-              </ng-container>
-              <ng-container matColumnDef="confirm">
-                <th mat-header-cell *matHeaderCellDef>confirm</th>
-                <td mat-cell *matCellDef="let acc">
-                  Text
+                  <ng-container>
+                    <mat-card>
+                      <mat-card-title>Change Password</mat-card-title>
+                      <mat-card-content>
+                        <mat-form-field>
+                          <input matInput type="password" [formControl]="getFormControl(changePasswordForm, 'password')"
+                                 matTooltip="Enter new password for user {{acc.userName}}"
+                                 matTooltipClass="tooltip"
+                                 placeholder="New Password">
+                          <mat-hint>New password for user {{acc.userName}}</mat-hint>
+                        </mat-form-field>
+                      </mat-card-content>
+                      <mat-form-field>
+                        <input matInput type="password"
+                               [formControl]="getFormControl(changePasswordForm, 'confirmPassword')"
+                               matTooltip="Confirm new password"
+                               matTooltipClass="tooltip"
+                               placeholder="Confirm New Password">
+                        <mat-hint>Confirm New password</mat-hint>
+                      </mat-form-field>
+                    </mat-card>
+                    <br>
+                    <span class="cam-creds-confirm-group">
+                      <button color="default" mat-flat-button (click)="changePassword(acc)"
+                              matTooltip="Close the change password form"
+                              matTooltipClass="tooltip">
+                        Cancel
+                      </button>
+                              <span>&nbsp;&nbsp;</span>
+                      <button color="warning" mat-flat-button
+                              [disabled]="anyInvalid() || successMessage != ''"
+                              (click)="changePassword(acc)"
+                              matTooltip="Login into the CCTV Cloud Service with the given username and password"
+                              matTooltipClass="tooltip">
+                        Reset Password
+                      </button>
+                    </span>
+                  </ng-container>
                 </td>
               </ng-container>
               <tr mat-header-row *matHeaderRowDef="changePasswordColumns"></tr>
