--- a/cloudFrontEnd/src/app/accountAdmin/account-admin.component.html
+++ b/cloudFrontEnd/src/app/accountAdmin/account-admin.component.html
@@ -49,6 +49,18 @@
         </td>
       </ng-container>
 
+      <ng-container matColumnDef="changeEmail">
+        <th mat-header-cell *matHeaderCellDef>Change Email Address</th>
+        <td class="buttons" mat-cell *matCellDef="let account">
+          <button mat-icon-button matTooltip="Change the email address for this account" matTooltipClass="tooltip"
+                  color="warn"
+                  [disabled]="!account.accountCreated"
+                  (click)="showChangeEmailForm(account)">
+            <mat-icon>email</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+
       <ng-container matColumnDef="disableAccount">
         <th mat-header-cell *matHeaderCellDef>Enable/Disable Account</th>
         <td class="check-box" mat-cell *matCellDef="let account">
@@ -105,7 +117,7 @@
         <td mat-cell *matCellDef="let account; let accIndex=dataIndex" [attr.colspan]="displayedColumns.length">
           <div class="edit-element-detail mat-elevation-z10"
                [@detailExpand]="account == expandedElement ? 'expanded' : 'collapsed'">
-            <table [dataSource]="[account]" mat-table class="mat-elevation-z10">
+            <table *ngIf="showChangePassword" [dataSource]="[account]" mat-table class="mat-elevation-z10">
               <ng-container matColumnDef="password">
                 <th mat-header-cell *matHeaderCellDef>password</th>
                 <td mat-cell *matCellDef="let acc">
@@ -141,7 +153,7 @@
                       <button color="warning" mat-flat-button
                               [disabled]="anyInvalid() || successMessage != ''"
                               (click)="changePassword(acc)"
-                              matTooltip="Login into the CCTV Cloud Service with the given username and password"
+                              matTooltip="Save the change to the {{acc.username}} account password"
                               matTooltipClass="tooltip">
                         Reset Password
                       </button>
@@ -152,6 +164,57 @@
                 </td>
               </ng-container>
 <!--              <tr mat-header-row *matHeaderRowDef="changePasswordColumns"></tr>-->
+              <tr mat-row *matRowDef="let row; columns: changePasswordColumns;"></tr>
+            </table>
+
+
+            <table *ngIf="showChangeEmail" [dataSource]="[account]" mat-table class="mat-elevation-z10">
+              <ng-container matColumnDef="password">
+                <th mat-header-cell *matHeaderCellDef>password</th>
+                <td mat-cell *matCellDef="let acc">
+                  <ng-container>
+                    <mat-card>
+                      <mat-card-title>Change Email Address</mat-card-title>
+                      <mat-card-content>
+                        <mat-form-field>
+                          <input matInput type="text" [formControl]="getFormControl(changeEmailForm, 'email')"
+                                 matTooltip="Enter new email address for user {{acc.userName}}"
+                                 matTooltipClass="tooltip"
+                                 placeholder="New Email Address">
+                          <mat-hint>New Email Address For User {{acc.userName}}</mat-hint>
+                        </mat-form-field>
+                      </mat-card-content>
+                      <mat-form-field>
+                        <input matInput type="text"
+                               [formControl]="getFormControl(changeEmailForm, 'confirmEmail')"
+                               matTooltip="Confirm new email address"
+                               matTooltipClass="tooltip"
+                               placeholder="Confirm New Email Address">
+                        <mat-hint>Confirm New Email Address</mat-hint>
+                      </mat-form-field>
+                    </mat-card>
+                    <br>
+                    <span class="cam-creds-confirm-group">
+                      <button color="default" mat-flat-button (click)="showChangeEmailForm(acc)"
+                              matTooltip="Close the change email address form"
+                              matTooltipClass="tooltip">
+                        Cancel
+                      </button>
+                              <span>&nbsp;&nbsp;</span>
+                      <button color="warning" mat-flat-button
+                              [disabled]="anyInvalidEmail() || successMessage != ''"
+                              (click)="changeEmail(acc)"
+                              matTooltip="Save the change to the {{acc.username}} account email address"
+                              matTooltipClass="tooltip">
+                        Change Email Address
+                      </button>
+                    </span>
+                    <br>
+                    <br>
+                  </ng-container>
+                </td>
+              </ng-container>
+              <!--              <tr mat-header-row *matHeaderRowDef="changePasswordColumns"></tr>-->
               <tr mat-row *matRowDef="let row; columns: changePasswordColumns;"></tr>
             </table>
           </div>
