--- a/cloudFrontEnd/src/app/login/forgotten-password/forgotten-password.component.scss
+++ b/cloudFrontEnd/src/app/login/forgotten-password/forgotten-password.component.scss
@@ -1,4 +1,4 @@
-.login-container
+.forgotten-password-container
 {
   margin-top: 1rem;
   font-size: 2rem;
@@ -10,8 +10,4 @@
     margin-left: auto;
     margin-right: auto;
   }
-}
-
-a.forgot-password {
-  color: #a5b9f8;
 }
